ui/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ui
  namespace: kws
  annotations:
    kubernetes.io/ingress.class: traefik  
spec:
  rules:
  - host: ui.knd.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: 80
